--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-  schedule:
-    - cron: '0 */6 * * *'
+  # schedule:
+  #   - cron: '0 */6 * * *'
 
 jobs:
   build:
