--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,3 +31,7 @@ jobs:
         run: node build/index.js
       - name: Commit and push
         uses: EndBug/add-and-commit@v9
+        with:
+          author_name: Varun Tiwari
+          author_email: tiwarivarun819.vt33.vt@gmail.com
+          message: ':memo: Update README.md'
